# deadlock

./: .env  .gitignore  Cargo.toml  docker-compose.yml  flake.nix  hash_pass.rs  run.sh
db/: init.sh  init.sql
serv/: .eslintignore  .gitignore  eslint.config.mjs  package.json  tsconfig.json
serv/src/: index.ts  oauth.ts  trpc.ts
serv/src/crates/: Cargo.toml
serv/src/crates/db/: Cargo.toml  package.json
serv/src/crates/db/src/: lib.rs
serv/src/crates/jwt_handler/: Cargo.toml
serv/src/crates/jwt_handler/src/: lib.rs
serv/src/crates/logger/: Cargo.toml
serv/src/crates/logger/src/: lib.rs
serv/src/crates/napi_exports/: Cargo.toml  package.json
serv/src/crates/napi_exports/src/: lib.rs
serv/src/crates/redis_handler/: Cargo.toml
serv/src/crates/redis_handler/src/: lib.rs
serv/src/crates/shared_types/: Cargo.toml
serv/src/crates/shared_types/src/: lib.rs
serv/src/crates/user_handler/: Cargo.toml  package.json
serv/src/crates/user_handler/src/: lib.rs
serv/src/rlibs/: db.node  index.d.ts  index.js  napi_exports.node
serv/src/rlibs/db/: db.node  index.d.ts
serv/src/rlibs/user_handler/: index.d.ts  user_handler.node
temp_hash/: Cargo.toml
tools/: fix.sh  gen.sh  run.sh  setup.sh  update.sh  utils.sh
web/: GridBuilder.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: LogViewer.tsx  LoginForm.tsx  Navbar.tsx  ProtectedRoute.tsx  index.ts
web/src/contexts/: auth.tsx  index.ts
web/src/hooks/: index.ts  useAuth.ts  useDebounce.ts
web/src/pages/: Home.tsx  index.ts  pages.ts
web/src/pages/AdminDashboard/: AdminDashboard.css  AdminDashboard.tsx
web/src/pages/FrontEndTest/: FrontEndQuestions.tsx  QuestionsPage.css
web/src/pages/Home/: Home.css  Home.tsx
web/src/pages/SettingsPage/: SettingsPage.tsx
web/src/pages/UserManagement/: UserManagement.tsx
web/src/pages/home/: Home.tsx
web/src/servs/: auth.ts  client.ts  index.ts  interceptor.ts
