[package]
name = "db"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
argon2 = "0.5.3"
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio = "1.48.0"
tokio-postgres = "0.7.15"
shared_types = { path = "../shared_types" }
