[package]
name = "db"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
shared_types = { workspace = true }
argon2 = { workspace = true }
deadpool-postgres = { workspace = true }
dotenv = { workspace = true }
rand_core = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
