[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
shared_types = { workspace = true }
