[package]
name = "napi_exports"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared_types = { workspace = true }
db = { workspace = true }
user_handler = { workspace = true }
jwt_handler = { workspace = true }

napi-derive = { workspace = true }
napi = { workspace = true, features = ["async"] }

[build-dependencies]
napi-build = { workspace = true }
