[package]
name = "shared_types"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
deadpool-postgres = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
serde = { workspace = true, features = ["derive"] }
