[package]
name = "user_handler"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
napi = { version = "3.6.1", features = ["async"] }
napi-derive = "3.4.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
shared_types = { path = "../shared_types" }
db = { path = "../db" }

[build-dependencies]
napi-build = "2.3.1"
