[package]
name = "user_handler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
argon2 = "0.5.3"
napi = { version = "3.6.1", features = ["async"] }
napi-derive = "3.4.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
shared_types = { path = "../shared_types" }
db = { path = "../db" }
