[package]
name = "user_handler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
shared_types = { workspace = true }
db = { workspace = true }
argon2 = { workspace = true }
napi-derive = { workspace = true }
rand_core = { workspace = true }
napi = { workspace = true, features = ["async"] }
